# grever

./: .dockerignore  .gitignore  CHANGELOG.md  GRASP_SPRINT_102-1_REPORT.md  README.md  docker-compose.yml  package-lock.json
Dockerfile/: Dockerfile
LICENSE/: LICENSE
config/: .bandit  .commit-msg-config  .editorconfig  .flake8  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  Dockerfile  alembic.ini  deploy-config.json  mode.json  pyproject.toml  requirements-dev.txt  requirements.txt
config/.github/workflows/: ci.yml
docker/: supervisord.conf
docs/: 00-快速部署指南.md  00-演示数据说明.md  00-用户快速开始.md  00-试用指南.md
docs/01-产品文档/产品介绍/: Nexus-产品介绍-应急抢险.md  Nexus-产品介绍-联勤保障.md  (+1 more)
docs/02-架构设计/: 00-platform-architecture.md  rbac-permission-system-design.md
docs/02-概要设计/: 模块组件调研报告.md
docs/04-前端详细设计/: 00-导航与路由总览.md  01-工作台.md  02-协同中心.md  03-场景库.md  04-技能库.md  05-认知中心.md  06-安全中心.md  07-系统管理.md  08-可视化.md  09-Agent派发与执行.md
docs/06-竞品分析/: tianjiang-competitive-analysis-appendix.md  tianjiang-competitive-analysis.md
docs/07-演示材料/: client-presentation-harness-engineering-ppt-direct.md  client-presentation-harness-engineering.md  client-presentation-ppt-plan.md  client-presentation-script-v4.md  client-presentation-script-v5.md  dispute-resolution-flowchart.md  harness-engineering-ppt-direct.md  nexus-sales-ppt-structure.md  p05-professional-task-challenge.md  p13-mock-requirements.md  p13-mockup-16-9.html  p13-mockup.html  ppt-plan-p13-revised.md  tianjiang-ppt-direct.md
docs/09-系统设计/: 01-接口规范-OpenAPI.md  22-industry-pack-system-design.md  22-前端代码整理方案.md  23-测试文件整理方案.md  24-E2E测试报告.md  25-测试用例总览.md  25-测试用例总览_审查报告.md  openapi-spec.json  代码重组方案-v2.md  代码重组方案-v3.md  重组方案.md
docs/98-方法论标准/: PMBOK第七版（中文版）.md  Scrum-Guide-2020-中文.md  test_chinese.txt
docs/architecture/: overview.md
docs/contributing/: guide.md
docs/guides/: development.md  quick-start.md
nginx/: nginx.conf
skills/: _utils.py
skills/executor/: README.md  SKILL.md  __init__.py  executor.py  main.py  skill.py  test_nexus_agent.py  trigger.py
skills/genesis/: SKILL.md  skill.py
skills/grasp/: IMPLEMENTATION_SUMMARY.md  README.md  Skill.md  jest.config.js  package.json  tsconfig.json  tsconfig.test.json
skills/pulse/: SKILL.md  skill.py
skills/reins/: SKILL.md  skill.py
skills/task-dispatch/: SKILL.md
skills/verifier/: SKILL.md  skill.py
tests/: conftest.py  test_reins.py
tests/grasp/: __init__.py  test_graceful_fallback.py
(+164 files in other folders)
